src/test/resources/de/feu/ps/bridges/serialization/semantic_errors/less_islands_than_stated.bgs
FIELD
11 x 8 | 3

ISLANDS
( 0, 0 | 1 )
( 0, 5 | 1 )

BRIDGES
( 0, 1 | false )
